@@ -27,6 +27,7 @@
   mmap_read/mmap_shared on zero length files no longer fail but return a
     zero length buffer
   if SOCK_NONBLOCK is defined, use it instead of socket+fcntl
+  ... but if errno==EINVAL still fall back to socket+fcntl (Robert Henney)
 
 0.29:
   save 8 bytes in taia.h for 64-bit systems
